# kutral

./: .gitignore  Kutral.sh  README.md  package-lock.json  package.json  vera-b1-b4a-snapshot.md  vera-b5-b8-snapshot.md  vera-v2.md  vera-v3.md
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  screening.json
src-tauri/src/: kodios.rs  lib.rs  main.rs  rd.rs  remote.html  screening.rs  webserver.rs
src/lib/: BrightnessControl.svelte  Header.svelte  Notifications.svelte  Updater.svelte  VolumeControl.svelte  WebServerControl.svelte  WifiManager.svelte  config.svelte.ts  notifStore.svelte.ts  os.ts  playerState.svelte.ts  screening.svelte.ts
src/lib/atajos/: Ayuda.svelte  store.svelte.ts
src/lib/habla/: Habla.svelte  frases.ts
src/lib/vera/: config.ts  frases.ts  historial.ts  import.ts  intenciones.ts  motor.ts  probes.ts  ratings.ts  tipos.ts  tmdb.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/config/: +page.svelte
src/routes/vera/: +page.svelte  README.md
src/routes/vera/catalog/: +page.svelte
