[package]
name = "kutral"
version = "2026.05.0"
description = "Kütral"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kutral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
url = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
hex = "0.4"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
enigo = "0.6.1"

